// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton renders big and small variants correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 90,
      "opacity": 1,
      "width": 90,
    }
  }
  testID="button"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "backgroundColor": "#ff5370",
          "borderRadius": 45,
          "color": "#ffffff",
          "fontSize": 50,
          "overflow": "hidden",
          "padding": 20,
          "textAlign": "center",
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`PlayButton renders big and small variants correctly 2`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="button"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "alignSelf": "flex-start",
          "backgroundColor": "#ff5370",
          "borderRadius": 5,
          "color": "#ffffff",
          "flexDirection": "row",
          "fontSize": 15,
          "marginBottom": 5,
          "marginHorizontal": 10,
          "padding": 5,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
    <Text>
       Odtwórz
    </Text>
  </Text>
</View>
`;
